# pmm-deep-agent

./: .gitignore  CLAUDE.md  Dockerfile  PLAN.md  docker-compose.yml  langgraph.json
.github/workflows/: ci.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
apps/agent/: README.md  pyproject.toml
apps/agent/src/pmm_agent/: __init__.py  agent.py  cli.py  prompts.py
apps/agent/src/pmm_agent/models/: __init__.py  evaluation.py
apps/agent/src/pmm_agent/subagents/: __init__.py  specialists.py
apps/agent/src/pmm_agent/tools/: __init__.py  creation.py  evaluation.py  web.py
apps/agent/tests/: conftest.py
apps/agent/tests/unit/: test_tools.py
apps/web/: index.html  netlify.toml  package-lock.json  package.json  vitest.config.ts
apps/web/src/: App.tsx  index.css
apps/web/tests/e2e/: homepage.spec.ts
apps/web/tests/unit/: constants.test.ts
docs/: ARCHITECTURE.md  CONTEXT.md  GETTING_STARTED.md
docs/incidents/: TEMPLATE.md
